# PirateProject

./: CMakeLists.txt  GameConcept.md  PirateProject.cbp  PirateProject.depend  PirateProject.layout  README.md  TPP_doc.odt  TPP_doc_ADVANCED.odt  TPP_doc_NORMAL.odt  bateau.cpp  bateau.h  interface.cpp  interface.h  interface.hpp  main.cpp  texte
assets/img/xcf/: bat1.xcf  bat2.xcf  bat4.xcf  map.xcf  map2.xcf  mer.xcf  tourb.xcf
img/xcf/: bat3.xcf  epic.xcf  ile.xcf  menu.xcf  mer.xcf  select.xcf  sidebar.xcf  ville.xcf  villeG.xcf  villeM.xcf  villeP.xcf
include/: bateau.hpp  canon.hpp  cible.hpp  interface.hpp  main.hpp  player.hpp  ship.hpp  voile.hpp
src/: bateau.cpp  bateau.hpp  cible.cpp  interface.cpp  main.cpp  player.cpp  player.hpp  ship.cpp  sidebar.cpp  sidebar.hpp
